<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dice_drawer_layout">

    <android.support.design.widget.NavigationView
        android:id="@+id/dice_navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/menu_navigation" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.DiceActivity">

        <Button
            android:id="@+id/rollButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:onClick="rollDices"
            android:text="Stop!"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.942" />

        <ch.epfl.sweng.erpa.views.FlowLayout
            android:id="@+id/dice_layout"
            android:layout_width="368dp"
            android:layout_height="371dp"
            android:onClick="remove_die"
            app:layout_constraintBottom_toTopOf="@+id/rollButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </ch.epfl.sweng.erpa.views.FlowLayout>

        <Button
            android:id="@+id/d4_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addAndUpdateDie"
            android:text="D4"
            app:layout_constraintBottom_toTopOf="@+id/d10_button"
            app:layout_constraintEnd_toStartOf="@+id/d6_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/d6_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addAndUpdateDie"
            android:text="D6"
            app:layout_constraintBottom_toTopOf="@+id/d20_button"
            app:layout_constraintEnd_toStartOf="@+id/d8_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/d4_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/d8_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addAndUpdateDie"
            android:text="D8"
            app:layout_constraintBottom_toTopOf="@+id/d20_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/d6_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/d10_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addAndUpdateDie"
            android:text="D10"
            app:layout_constraintBottom_toTopOf="@+id/dice_layout"
            app:layout_constraintEnd_toStartOf="@+id/d20_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/d4_button" />

        <Button
            android:id="@+id/d20_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addAndUpdateDie"
            android:text="D20"
            app:layout_constraintBottom_toTopOf="@+id/dice_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/d10_button"
            app:layout_constraintTop_toBottomOf="@+id/d6_button" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.DrawerLayout>
