<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.SortActivity">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/sortNestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ch.epfl.sweng.erpa.views.FlowLayout
                android:id="@+id/flow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/difficultyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sortByDifficulty" />

                <CheckBox
                    android:id="@+id/diffAsc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ascending" />

                <CheckBox
                    android:id="@+id/diffDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/descending" />
            </ch.epfl.sweng.erpa.views.FlowLayout>

            <ch.epfl.sweng.erpa.views.FlowLayout
                android:id="@+id/flow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/flow1">

                <TextView
                    android:id="@+id/maxNumPlayerTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sortByMaximumNumberOfPlayers" />

                <CheckBox
                    android:id="@+id/maxNumPlayerAsc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ascending" />

                <CheckBox
                    android:id="@+id/maxNumPlayerDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/descending" />

            </ch.epfl.sweng.erpa.views.FlowLayout>

            <ch.epfl.sweng.erpa.views.FlowLayout
                android:id="@+id/flow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/flow2">

                <TextView
                    android:id="@+id/distanceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sort_by_distance" />

                <CheckBox
                    android:id="@+id/distAsc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ascending" />

                <CheckBox
                    android:id="@+id/distDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/descending" />

            </ch.epfl.sweng.erpa.views.FlowLayout>

            <ch.epfl.sweng.erpa.views.FlowLayout
                android:id="@+id/flow4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/flow3">


                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sort_by_date" />

                <CheckBox
                    android:id="@+id/dateAsc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ascending" />

                <CheckBox
                    android:id="@+id/dateDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/descending" />

            </ch.epfl.sweng.erpa.views.FlowLayout>

            <Button
                android:id="@+id/sortButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/flow4" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>